feat: Implement configurable login icon via environment variable and update monitored hosts list.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
 # Configuração do Servidor
-EDITOR_TOKEN=seu_token_aqui
-JWT_SECRET=seu_segredo_jwt_aqui
+PORT=3000
+JWT_SECRET=seu_segredo_jwt_aqui_gera_automatico_se_vazio
+EDITOR_TOKEN=seu_token_de_editor_aqui
 
-# Configuração de Email (SMTP)
-# Exemplo para Gmail: smtp.gmail.com, 587, seu_email@gmail.com, senha_de_app
-SMTP_HOST=smtp.exemplo.com
-SMTP_PORT=587
-SMTP_USER=seu_usuario
-SMTP_PASS=sua_senha
+# Personalização (Opcional)
+# Caminho absoluto para o arquivo de imagem ou URL externa
+# Exemplo: /home/usuario/imagens/logo.png ou https://exemplo.com/logo.png
+LOGIN_ICON=
