feat: Initialize Prisma with a new database and migration, update numerous Node.js dependencies, and refine MIME type scoring for audio/video.

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.11",
     "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "@prisma/client": "^5.22.0",
+    "prisma": "^5.22.0"
   }
 }
